name:                storable-sop
version:             1.0.0
synopsis:            A generic implementation of Storable
homepage:            http://github.com/ocharles/storable-sop
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Generics.SOP.Storable
  build-depends:
      base >=4.7 && <4.8
    , generics-sop >= 0.1.0.2 && < 0.2
  default-language:    Haskell2010
  ghc-options: -Wall